# 2024-05-12-monster-capture-game

./: .gitignore  2024-05-12-monster-capture-game-dotnet.csproj  Program.cs  main.py  pyproject.toml  readme.md
classes/gen_ai/: large_language_model.py
classes/monsters/: codemon.py  readme.md  thunderwyrm.py
classes/monsters/statistics/: element.py  id_codemon_map.py  species.py
server/: app.py  get_codemon_info.py
server/helpers/: get_codemon_from_id.py  get_codemon_info_helper.py  get_codemon_stats_helper.py
