[tool.poetry]
name = "2024-05-12-monster-capture-game-dotnet"
version = "0.1.0"
description = ""
authors = ["Joe Gilbert <joegilbertdev@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
black = "^24.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
